mtls-demo/600-service1.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  annotations:
    serving.knative.openshift.io/enablePassthrough: "true"
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - image: docker.io/openshift/hello-openshift
