mtls-demo/700-service2.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello-proxy
  annotations:
    serving.knative.openshift.io/enablePassthrough: "true"
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - image: quay.io/openshift-knative/httpproxy:v0.21
        env:
        - name: TARGET_HOST
          value: hello.default.svc.cluster.local
